src/css/style.css
/** Navigation Bar Scroll **/

img#eb-logo {
  margin-top: -35px;
}

/** Nav Logo Media Queries **/
@media (max-width: 775px) and (min-width: 300px){
  img#eb-logo {
    margin-top: -10px;
    width: 150px;
    height: 48px;
  }
}

/** Carousel **/
.carousel-control.right,
.carousel-control.left {
  background-image: none;
}

#featured .item {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  width: 100%;
  height: 100%;
}

.carousel .item img {
  /*width: 100%; img width*/
  /*height: 88vh;*/
  width: 100%;
  height: 100%;
}

@media (max-width: 400px) {
  .carousel .item img {
    width: 400px;
    height: 190px;
  }
}

/** Social Media and Links Section **/
aside.clients {
  background-color: #E8F3F8;
  height: 82px;
}

aside.clients .container {
  height: 82px;
}

aside.clients .container .row {
  margin-top: 17px;
  margin-bottom: 17px;
}

aside img#icon {
  display: block;
  margin: 10px auto;
  transform: scale(1.5);
}

img#icon:hover {
  transform: scale(2);
  opacity: .8;
}

/** Background Media Queries **/

@media (max-width: 1191px) and (min-width: 400px){
  section#background {
    padding-top: 40px;
    padding-bottom: 40px;
  }
  div#bg-description {
    padding-top: 15px;
    padding-bottom: -15px;
  }
}

/** Services Section **/

.service-description {
  width: 90%;
}

i:active {
  color: #373B44;
}

i:hover {
  color: #373B44;
}

div.service-title h2 {
  margin-left: 10px;
  margin-top: 25px;
  /*font-size: 34px;*/
}

div.service-description p {
  width: 90%;
  margin-left: 10px;
  /*font-size: 13px;*/
}

/* Services Media Queries */

@media (max-width: 400px) {
  .services-triangle {
    visibility: hidden;
  }
}

@media (max-width: 477px) {
  div.service-title h2 {
    font-size: 1em;
  }
  div.service-description p {
    font-size: 0.8em;
  }
}

@media (max-width: 700px) and (min-width: 478px) {
  div.service-title h2 {
    font-size: 20px;
  }
  div.service-description p {
    /*font-size: 10px; */
    font-size: 0.9em;
  }
}

@media (max-width: 899px) and (min-width: 701px) {
  div.service-title h2 {
    font-size: 25px;
  }
  div.service-description p {
    font-size: 1.1em;
  }
}

@media (min-width: 900px){
  div.service-title h2 {
    font-size: 30px;
  }
  div.service-description p {
    /*font-size: 17px; */
    font-size: 1.15em;
  }
}

@media (max-width: 601px) and (min-width: 401px) {
  .services-triangle {
    border-width: 0 70px 70px 70px;
  }
}

/** Testimonial Section **/

#testimonial {
  background-color: #C2CBCE;
  padding: 0;
}

.testimonial-tab {
  background-color: #FED136;
  border: none;
  filter: grayscale(40%);
}

#testimonial .row {
  margin: 0;
  padding: 0;
}

#testimonial .row .col-sm-9, .col-sm-3 {
  padding: 0;
}

#testimonial #quote {
  padding: 50px 20px;
  background-color: #4D4D4D;
  opacity: 0.9;
  color: #ffffff;
  height: 600px;  /** adjust this with tab size **/
}

#testimonial #quote p {
  font-size: 1.25em;
}

.testimonial-tab:hover {
  background-color: #FED136;
  border: none;
  filter: none;
}

#show-testimonial {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  width: 100%;
  height: 100%;
  /*overflow: hidden;*/
}

.tab1-bg {
  background-image: url('./../public/img/testimonial_img1-lg.jpg');
}

.tab2-bg {
  background-image: url('./../public/img/testimonial_img2-lg.jpg');
}

.tab3-bg {
  background-image: url('./../public/img/testimonial_img3-lg.jpg');
}

.toggler {
  background-clip: padding-box;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  text-align: center;
  border: 1px solid rgba(0, 0, 0, .15);
  width: 20px;
  height: 48px;
  position: absolute;
  top: 45%;
  cursor: pointer;
}

/** Testimonials Media Queries **/

@media (min-width: 768px) and (max-width: 865px) {
  #testimonial #quote h2 {
    font-size: 30px;
  }

  #testimonial #quote p {
    font-size: 1.1em;
  }
}

@media (max-width: 428px) {
  #testimonial #quote h2 {
    font-size: 35px;
  }

  #testimonial #quote p {
    font-size: 1.2em;
  }
}

@media (min-width: 768px) {
  .testimonial-tab {
    height: 200px;
  }
}

@media (max-width: 767px) {
  section#testimonial {
    padding-bottom: 0;
  }

  #testimonial #quote {
    max-height: 500px;
  }
}

@media (min-width: 1441px) {
  div#tab1 img,
  div#tab2 img,
  div#tab3 img {
    width: 100%;
    height: 100%;
  }
}

/** Login **/

.modal-footer {   
  border-top: 0px; 
}

.show {
  margin-top: 100px; 
}

#admin-login-title {
  text-transform: capitalize;
}

/** Contact Availability **/

.col-lg-4.availability {
  background-color: #373B44;
  opacity: .9;
  padding-top: 1px;
  padding-bottom: 5px;
}

h3.section-availability {
  padding-left: 10px;
  height: 35px;
  color: #fff;
}

/** About Section **/

#about img#profile {
  display: block;
  margin: 30px auto;
}

#about #text {
  display: block;
  margin: 30px auto;
  padding-left: 200px;
}

#about h2 {
  text-align: right;
}

#about h4 {
  text-align: left;
}

/** About Media Queries **/ 

@media (max-width: 767px) and (min-width: 400px){
  div#about-description {
    margin-top: 40px;
    margin-bottom: -40px;
  }
}

@media (max-width: 767px) {
  #about h2 {
    text-align: center;
  }
  #about #text {
    padding-left: 0;
  }
}

@media (max-width: 992px) and (min-width:768px) {
  div#about-description {
    margin-left: -200px;
  }
}

/* Contact Media Queries */

@media (max-width: 1198px) and (min-width: 300px) {
  .col-lg-4.availability {
    margin-top: 20px;
    margin-left: 0 auto;
    width: 100%;
  }
  button.sendMessage {
    margin: 0 auto;
  }
}

